# opened-gate

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
.github/workflows/: build.yml
app/: .gitignore  app.py  model.onnx.dvc
data/01_raw/: .gitignore  camera-images.dvc
data/06_models/: model.ckpt.dvc  model.onnx.dvc
scripts/: download_images_from_ssh_server.sh  upload_model_to_monitoring_server.sh
src/opened_gate/: deploy.py  train.py
